# alatheia-comodatos-api

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  local.Dockerfile  pyproject.toml  requirements.txt
.docs/: comandos-utiles.md
clientes/: models.py
clientes/migrations/: 0001_initial.py
comodatos/: apps.py  models.py
comodatos/migrations/: 0001_initial.py
core/: settings.py  urls.py
instrumentos/: models.py
instrumentos/migrations/: 0001_initial.py
master_data/: models.py
master_data/migrations/: 0001_initial.py
reports/: urls.py  views.py
